src/test/jenkins/job/shouldFail/nonCpsCallingCps.jenkins
node() {
    stage('List') {
        List<Long> list = createList()
    }
}

long getLong() {
    return 2L
}

@NonCPS
List<Long> createList() {
    getLong()
    return []
}